RESOLVED FIXED88118
[Win] jscore-tests flakey
https://bugs.webkit.org/show_bug.cgi?id=88118
Summary [Win] jscore-tests flakey
Jessie Berlin
Reported 2012-06-01 12:02:36 PDT
The tests that fail and the number of tests that fail vary between runs: http://build.webkit.org/builders/Windows%207%20Release%20%28Tests%29/builds/24361/steps/jscore-test/logs/stdio (r119227) ** Danger, Will Robinson! Danger! The following failures have been introduced: js1_3/regress/function-002.js http://build.webkit.org/builders/Windows%207%20Release%20%28Tests%29/builds/24362 (r119229) No failures http://build.webkit.org/builders/Windows%207%20Release%20%28Tests%29/builds/24363/steps/jscore-test/logs/stdio (r119235) ** Danger, Will Robinson! Danger! The following failures have been introduced: ecma/LexicalConventions/7.4.3-1-n.js js1_2/regexp/parentheses.js http://build.webkit.org/builders/Windows%207%20Release%20%28Tests%29/builds/24365/steps/jscore-test/logs/stdio (r119239) ** Danger, Will Robinson! Danger! The following failures have been introduced: ecma/Date/15.9.3.8-4.js ecma_2/Exceptions/expression-019.js ecma_2/Exceptions/lexical-015.js ecma_3/RegExp/regress-78156.js http://build.webkit.org/builders/Windows%207%20Release%20%28Tests%29/builds/24366/steps/jscore-test/logs/stdio (r119241) ** Danger, Will Robinson! Danger! The following failures have been introduced: ecma_2/Statements/switch-002.js I am not sure what to do about this. As long as they are flakey, the Windows bots will be flakey red.
Attachments
Patch (5.31 KB, patch)
2012-06-27 18:02 PDT, Michael Saboff
jberlin: review+
Radar WebKit Bug Importer
Comment 1 2012-06-01 12:03:31 PDT
Michael Saboff
Comment 2 2012-06-27 18:02:00 PDT
WebKit Review Bot
Comment 3 2012-06-27 18:05:49 PDT
Attachment 149837 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/tests/mozilla/jsDriver.pl:191: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/tests/mozilla/jsDriver.pl:192: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/tests/mozilla/jsDriver.pl:193: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/tests/mozilla/jsDriver.pl:219: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/tests/mozilla/jsDriver.pl:222: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/tests/mozilla/jsDriver.pl:223: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/tests/mozilla/jsDriver.pl:225: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/tests/mozilla/jsDriver.pl:226: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/tests/mozilla/jsDriver.pl:227: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/tests/mozilla/jsDriver.pl:228: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/tests/mozilla/jsDriver.pl:229: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/tests/mozilla/jsDriver.pl:230: Line contains tab character. [whitespace/tab] [5] Total errors found: 12 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jessie Berlin
Comment 4 2012-06-27 18:09:56 PDT
Comment on attachment 149837 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=149837&action=review > Source/JavaScriptCore/tests/mozilla/jsDriver.pl:185 > +# with 0 or 3. To work around this, a -x option was added to jsc that will Missing an ")" after 3. > Source/JavaScriptCore/tests/mozilla/jsDriver.pl:231 > + } elsif ($opt_exit_munge == 1) { Looks like this elseif needs to be outdented one level.
Michael Saboff
Comment 5 2012-06-27 18:14:33 PDT
Note You need to log in before you can comment on or make changes to this bug.