[Win] jscore-tests flakey https://bugs.webkit.org/show_bug.cgi?id=88118

Reviewed by Jessie Berlin.

jsDriver.pl on windows intermittently doesn't get the returned value from jsc,
instead it gets 126.  Added a new option to jsc (-x) which prints the exit
code before exiting.  jsDriver.pl uses this option on Windows and parses the
exit code output for the exit code, removing it before comparing the actual
and expected outputs.  Filed a follow on "FIXME" defect:
[WIN] Intermittent failure for jsc return value to propagate through jsDriver.pl
https://bugs.webkit.org/show_bug.cgi?id=90119

* jsc.cpp:
(CommandLine::CommandLine):
(CommandLine):
(printUsageStatement):
(parseArguments):
(jscmain):
* tests/mozilla/jsDriver.pl:
(execute_tests):


Canonical link: https://commits.webkit.org/107963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121394 268f45cc-cd09-0410-ab3c-d52691b4dbfc